# hailo_inference_pipeline

./: .gitignore  CHANGELOG_v1.4.0.md  CLAUDE.md  DISPLAY_THREAD_TIMING.md  PERFETTO_VISUALIZATION_GUIDE.md  README.md  inference.py  inference_utils.py  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: class_names_coco.json  palm_detection_full.json  yolov11_coco.json  yolov8.json  yolov8_coco.json
cpp/: CMakeLists.txt  README.md
cpp/include/: exceptions.hpp  inference_pipeline.hpp  inference_types.hpp  inference_utils.hpp
cpp/include/postprocess/: classification.hpp  nms_on_host.hpp  palm_detection.hpp  postprocess_base.hpp
cpp/src/: inference_pipeline.cpp  inference_utils.cpp  main.cpp
cpp/src/postprocess/: classification.cpp  nms_on_host.cpp  palm_detection.cpp
doc/: DISPLAY_THREAD_TIMING.md  FRAMEREADER_INTEGRATION.md  PERFETTO_VISUALIZATION_GUIDE.md
notebook/: palm_detection_full_DFC.ipynb  palm_detection_full_inference.ipynb
postprocess/: class_names_coco.json  classification.py  imagenet.json  nms_on_host.py  palm_detection.py
